--- a/index.html
+++ b/index.html
@@ -1,87 +1,76 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8" />
-<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Whisp Chat</title>
 <style>
-html, body { margin:0; padding:0; height:100%; background:#dcefff; font-family:system-ui,sans-serif; }
-main { height:100%; display:flex; flex-direction:column; }
-.screen { display:none; flex-direction:column; height:100%; }
-.screen.active { display:flex; }
-
-#loginScreen { justify-content:center; align-items:center; text-align:center; padding:20px; }
-#loginScreen input { display:block; width:80%; margin:8px auto; padding:10px; border-radius:8px; border:none; font-size:1rem; }
-#loginBtn { background:#89c2f4; color:white; border:none; padding:10px 20px; border-radius:8px; cursor:pointer; font-weight:600; }
-
-#chatListScreen { background:#fff; flex:1; position:relative; }
-#chatListHeader { background:#89c2f4; color:white; padding:14px; display:flex; justify-content:space-between; align-items:center; font-weight:600; }
-#chatList { flex:1; overflow-y:auto; padding-bottom:70px; }
-.chatItem { padding:14px; border-bottom:1px solid #eee; cursor:pointer; }
-.chatItem:hover { background:#f0f8ff; }
-
-#bottomMenu { display:flex; justify-content:space-around; align-items:center; position:fixed; bottom:0; left:0; width:100%; background:#89c2f4; padding:10px 0; }
-#bottomMenu button { background:#fff; border:none; color:#89c2f4; padding:8px 16px; border-radius:8px; font-weight:600; cursor:pointer; }
-
-#chatScreen { background:#dcefff; display:flex; flex-direction:column; height:100%; }
-#chatHeader { background:#89c2f4; color:white; padding:12px; display:flex; justify-content:space-between; align-items:center; }
-#chatHeader button { background:none; border:none; color:white; font-size:1rem; cursor:pointer; }
-#messages { flex:1; overflow-y:auto; padding:10px; display:flex; flex-direction:column; }
-.msg { max-width:80%; margin-bottom:10px; padding:8px 12px; border-radius:10px; position:relative; word-wrap:break-word; }
-.me { align-self:flex-end; background:#c0e0ff; }
-.them { align-self:flex-start; background:#fff; }
-.timestamp { font-size:0.75rem; color:#666; text-align:right; margin-top:2px; }
-
-#replyBar { display:none; background:#f0f0f0; padding:6px 10px; border-left:4px solid #89c2f4; font-size:0.9rem; }
-#inputBar { display:flex; align-items:center; background:#fff; padding:8px; border-top:1px solid #ccc; }
-#message { flex:1; padding:10px; border-radius:20px; border:1px solid #ccc; outline:none; }
-#sendBtn { background:#89c2f4; color:white; border:none; border-radius:50%; width:42px; height:42px; margin-left:8px; font-size:1.2rem; cursor:pointer; }
-
-@media (min-width:700px){ main{max-width:600px;margin:auto;border-radius:10px;overflow:hidden;} #bottomMenu{position:static;border-top:1px solid #ccc;} }
+  body { font-family: system-ui, sans-serif; margin:0; background:#d0e7ff; display:flex; justify-content:center; }
+  main { width:100%; max-width:600px; height:100vh; background:#fff; display:flex; flex-direction:column; overflow:hidden; box-shadow:0 4px 10px rgba(0,0,0,0.1);}
+  header { background:#a1cfff; color:white; padding:14px; text-align:center; font-weight:600;}
+  .screen { display:none; flex-direction:column; flex:1; }
+  .screen.active { display:flex; }
+  input, textarea, button { font-family:inherit; font-size:1rem; }
+  .auth { padding:20px; display:flex; flex-direction:column; gap:10px; }
+  .auth input { padding:10px; border-radius:6px; border:1px solid #ccc; }
+  .auth button { background:#70b7ff; color:white; border:none; border-radius:6px; padding:10px; cursor:pointer; font-weight:600; }
+  #chatList { flex:1; overflow-y:auto; padding:10px; }
+  .chat-item { padding:12px; border-bottom:1px solid #ddd; cursor:pointer; }
+  .chat-item:hover { background:#f0f8ff; }
+  #chatHeader { display:flex; justify-content:space-between; align-items:center; padding:10px; background:#a1cfff; color:white; }
+  #chatHeader button { background:#70b7ff; color:white; border:none; padding:6px 10px; border-radius:6px; cursor:pointer; }
+  #chatTitle { font-weight:bold; text-align:center; flex:1; margin:0 10px; }
+  #messages { flex:1; overflow-y:auto; padding:10px; background:#e6f2ff; display:flex; flex-direction:column; }
+  .msg { max-width:70%; padding:10px 14px; border-radius:10px; margin:6px 0; font-size:0.95rem; word-break:break-word; }
+  .you { align-self:flex-end; background:#cce7ff; }
+  .other { align-self:flex-start; background:#fff; }
+  form { display:flex; padding:10px; background:#f0f0f0; }
+  textarea { flex:1; padding:10px; border-radius:20px; border:none; resize:none; outline:none; }
+  button.send { background:#a1cfff; color:white; border:none; border-radius:50%; width:42px; height:42px; margin-left:8px; font-size:1.2rem; cursor:pointer; }
 </style>
 </head>
 <body>
 <main>
-  <section id="loginScreen" class="screen active">
-    <div>
-      <h2>Whisp Login</h2>
-      <input id="email" placeholder="Email" />
-      <input id="password" type="password" placeholder="Password" />
-      <input id="username" placeholder="Username (for signup)" />
-      <button id="loginBtn">Login / Register</button>
-    </div>
-  </section>
+  <header>Whisp Chat</header>
 
-  <section id="chatListScreen" class="screen">
-    <div id="chatListHeader">Your Chats</div>
+  <!-- AUTH SCREEN -->
+  <div id="authScreen" class="screen active">
+    <div class="auth">
+      <input id="email" placeholder="Email">
+      <input id="password" type="password" placeholder="Password">
+      <input id="username" placeholder="Username (new users)">
+      <button id="signup">Sign Up</button>
+      <button id="login">Log In</button>
+    </div>
+  </div>
+
+  <!-- CHAT LIST SCREEN -->
+  <div id="chatListScreen" class="screen">
+    <button id="newGroup" style="margin:10px;">➕ New Group</button>
     <div id="chatList"></div>
-    <div id="bottomMenu">
-      <button id="dmBtn">DM</button>
-      <button id="groupBtn">Group</button>
-      <button id="helpBtn">Help</button>
-      <button id="logoutBtn">Logout</button>
-    </div>
-  </section>
+  </div>
 
-  <section id="chatScreen" class="screen">
+  <!-- CHAT SCREEN -->
+  <div id="chatScreen" class="screen">
     <div id="chatHeader">
-      <button id="backBtn">←</button>
-      <span id="chatName">Chat</span>
+      <button id="backBtn">⬅ Back</button>
+      <span id="chatTitle">Chat</span>
+      <button id="dmBtn">💬 DM</button>
     </div>
     <div id="messages"></div>
-    <div id="replyBar"></div>
-    <div id="inputBar">
-      <input id="message" placeholder="Type a message..." />
-      <button id="sendBtn">➤</button>
-    </div>
-  </section>
+    <form id="chatForm" onsubmit="return false;">
+      <textarea id="message" placeholder="Type a message..."></textarea>
+      <button class="send" id="send">➤</button>
+    </form>
+  </div>
 </main>
 
 <script type="module">
 import { initializeApp } from "https://www.gstatic.com/firebasejs/11.0.1/firebase-app.js";
-import { getAuth, signInWithEmailAndPassword, createUserWithEmailAndPassword, signOut, onAuthStateChanged } from "https://www.gstatic.com/firebasejs/11.0.1/firebase-auth.js";
-import { getDatabase, ref, set, push, get, onChildAdded } from "https://www.gstatic.com/firebasejs/11.0.1/firebase-database.js";
+import { getDatabase, ref, push, set, onChildAdded, get } from "https://www.gstatic.com/firebasejs/11.0.1/firebase-database.js";
+import { getAuth, createUserWithEmailAndPassword, signInWithEmailAndPassword, onAuthStateChanged } from "https://www.gstatic.com/firebasejs/11.0.1/firebase-auth.js";
 
+// 🔧 Replace with your Firebase config
 const firebaseConfig = {
   apiKey: "AIzaSyCEdtncZpDgOSnULIjopee7GKh9h9hveKk",
   authDomain: "messagingapp-7ede5.firebaseapp.com",
@@ -93,156 +82,156 @@ const firebaseConfig = {
 };
 
 const app = initializeApp(firebaseConfig);
-const auth = getAuth(app);
 const db = getDatabase(app);
+const auth = getAuth(app);
 
-const loginScreen = document.getElementById("loginScreen");
+const authScreen = document.getElementById("authScreen");
 const chatListScreen = document.getElementById("chatListScreen");
 const chatScreen = document.getElementById("chatScreen");
 const chatList = document.getElementById("chatList");
 const messagesDiv = document.getElementById("messages");
-const replyBar = document.getElementById("replyBar");
-const messageInput = document.getElementById("message");
 
-let currentUser = null, currentChatId = null, replyTo = null;
+let currentUser = null;
+let currentChatId = null;
 
-const show = s => { [loginScreen, chatListScreen, chatScreen].forEach(e=>e.classList.remove("active")); s.classList.add("active"); };
+const show = (el) => {
+  [authScreen, chatListScreen, chatScreen].forEach(s => s.classList.remove("active"));
+  el.classList.add("active");
+};
 
-// Login/Register (fixed)
-document.getElementById("loginBtn").onclick = async () => {
+// SIGN UP
+document.getElementById("signup").onclick = async () => {
   const email = document.getElementById("email").value.trim();
   const password = document.getElementById("password").value.trim();
   const username = document.getElementById("username").value.trim();
-  if (!email || !password) return alert("Enter credentials.");
+  if(!email || !password || !username) return alert("Fill all fields");
   try {
-    currentUser = (await signInWithEmailAndPassword(auth,email,password)).user;
-  } catch {
-    if (!username) return alert("Enter a username to sign up.");
-    currentUser = (await createUserWithEmailAndPassword(auth,email,password)).user;
-    await set(ref(db,"users/"+currentUser.uid),{username,email});
-    alert("Account created successfully!");
-  }
+    const cred = await createUserWithEmailAndPassword(auth,email,password);
+    await set(ref(db,"users/"+cred.user.uid),{username,email});
+    alert("Account created!");
+  } catch(err){ alert(err.message); }
 };
 
-onAuthStateChanged(auth, async user => {
-  if(user){ currentUser=user; loadChats(); show(chatListScreen); }
-  else show(loginScreen);
+// LOG IN
+document.getElementById("login").onclick = async ()=>{
+  const email = document.getElementById("email").value.trim();
+  const password = document.getElementById("password").value.trim();
+  try { await signInWithEmailAndPassword(auth,email,password); }
+  catch(err){ alert(err.message); }
+};
+
+// AUTH STATE
+onAuthStateChanged(auth, async (user)=>{
+  if(user){ currentUser = user; show(chatListScreen); loadChats(); }
+  else { show(authScreen); }
 });
 
-async function loadChats() {
+// LOAD CHATS
+async function loadChats(){
   chatList.innerHTML="";
-  const chats = await get(ref(db,"chats"));
-  if(chats.exists()){ chats.forEach(c=>{
-    const chat=c.val();
+  const snapshot = await get(ref(db,"chats"));
+  if(!snapshot.exists()) return;
+  snapshot.forEach(chatSnap=>{
+    const chat = chatSnap.val();
     if(chat.members && chat.members.includes(currentUser.uid)){
       const div=document.createElement("div");
-      div.className="chatItem"; div.textContent=chat.name;
-      div.onclick=()=>openChat(c.key,chat.name);
-      chatList.append(div);
+      div.classList.add("chat-item");
+      div.textContent = chat.isGroup ? "👥 "+chat.name : "💬 "+chat.name;
+      div.onclick = ()=> openChat(chatSnap.key, chat.name);
+      chatList.appendChild(div);
     }
-  }); }
-}
-
-// Open Chat
-async function openChat(id,name){
-  currentChatId=id;
-  messagesDiv.innerHTML="";
-  document.getElementById("chatName").textContent=name;
-  show(chatScreen);
-  const msgRef = ref(db,"chats/"+id+"/messages");
-  onChildAdded(msgRef,s=>renderMessage(s.val(), id));
-}
-
-function renderMessage(m, chatId){
-  const div=document.createElement("div");
-  div.classList.add("msg", m.sender===currentUser.uid?"me":"them");
-  div.innerHTML = `
-    ${m.replyTo ? `<div style="font-size:0.85rem;color:#555;border-left:3px solid #89c2f4;padding-left:6px;margin-bottom:3px;">${m.replyTo}</div>` : ""}
-    ${m.text}
-    <div class="timestamp">${new Date(m.time).toLocaleTimeString([], {hour:'2-digit',minute:'2-digit'})}</div>`;
-  messagesDiv.append(div);
-  messagesDiv.scrollTop = messagesDiv.scrollHeight;
-
-  div.addEventListener("touchstart", e=>div.startX=e.touches[0].clientX);
-  div.addEventListener("touchmove", e=>{
-    const diff=e.touches[0].clientX-div.startX;
-    if(diff>70) showReplyBar(m.text);
   });
-  div.onclick=()=>showReplyBar(m.text);
+}
 
-  // Notification
-  if(m.sender!==currentUser.uid) showNotification("Whisp: New message", m.text);
+// OPEN CHAT
+async function openChat(chatId, chatName="Chat"){
+  currentChatId = chatId;
+  show(chatScreen);
+  messagesDiv.innerHTML="";
+  document.getElementById("chatTitle").textContent = chatName;
+  const messagesRef = ref(db,`chats/${chatId}/messages`);
+  onChildAdded(messagesRef, (snap)=>{
+    const msg = snap.val();
+    const div = document.createElement("div");
+    div.classList.add("msg", msg.sender === currentUser.uid ? "you" : "other");
+    div.innerHTML = `<strong>${msg.sender}</strong>: ${msg.text}`;
+    messagesDiv.appendChild(div);
+    messagesDiv.scrollTop = messagesDiv.scrollHeight;
+  });
+}
 
-  // Auto-reply for Whisp_Management
-  if(chatId && m.sender!==currentUser.uid){
-    get(ref(db,"users")).then(usersSnap=>{
-      usersSnap.forEach(u=>{
-        if(u.val().username==="Whisp_Management"){
-          if(currentChatId && currentChatId===chatId){
-            push(ref(db,"chats/"+chatId+"/messages"),{
-              sender:u.key,
-              text:"Thanks for contacting Whisp support! Our team will get back to you as soon as possible.",
-              time:Date.now()
-            });
-          }
-        }
-      });
+// SEND MESSAGE
+document.getElementById("send").onclick = async ()=>{
+  const msgInput = document.getElementById("message");
+  if(!msgInput.value.trim() || !currentChatId) return;
+  await push(ref(db,`chats/${currentChatId}/messages`),{
+    sender: currentUser.uid,
+    text: msgInput.value.trim(),
+    time:Date.now()
+  });
+  msgInput.value="";
+  messagesDiv.scrollTop = messagesDiv.scrollHeight;
+};
+
+// BACK BUTTON
+document.getElementById("backBtn").onclick = ()=>{
+  currentChatId=null;
+  messagesDiv.innerHTML="";
+  show(chatListScreen);
+};
+
+// NEW GROUP
+document.getElementById("newGroup").onclick=async ()=>{
+  const name=prompt("Group name:");
+  if(!name) return;
+  const newChatRef = push(ref(db,"chats"));
+  await set(newChatRef,{
+    name,
+    isGroup:true,
+    members:[currentUser.uid]
+  });
+  loadChats();
+};
+
+// DIRECT MESSAGE
+document.getElementById("dmBtn").onclick=async ()=>{
+  const targetUsername=prompt("Enter username to DM:");
+  if(!targetUsername) return;
+  const usersSnap = await get(ref(db,"users"));
+  let targetUser = null;
+  usersSnap.forEach(u=>{
+    const val = u.val();
+    if(val.username.toLowerCase() === targetUsername.toLowerCase()){
+      targetUser = { uid: u.key, username: val.username };
+    }
+  });
+  if(!targetUser) return alert("User not found.");
+  
+  // Check for existing chat
+  const chatsSnap = await get(ref(db,"chats"));
+  let chatId = null;
+  if(chatsSnap.exists()){
+    chatsSnap.forEach(c=>{
+      const chat = c.val();
+      if(!chat.isGroup && chat.members.includes(currentUser.uid) && chat.members.includes(targetUser.uid)){
+        chatId = c.key;
+      }
     });
   }
-}
 
-function showReplyBar(text){ replyTo=text; replyBar.style.display="block"; replyBar.textContent="Replying to: "+text.slice(0,40); }
+  // If not found, create new DM
+  if(!chatId){
+    const newChatRef = push(ref(db,"chats"));
+    await set(newChatRef,{
+      isGroup:false,
+      members:[currentUser.uid, targetUser.uid],
+      name:targetUser.username
+    });
+    chatId = newChatRef.key;
+  }
 
-document.getElementById("sendBtn").onclick=async ()=>{
-  const text=messageInput.value.trim();
-  if(!text||!currentChatId) return;
-  await push(ref(db,"chats/"+currentChatId+"/messages"),{
-    sender:currentUser.uid, text, replyTo, time:Date.now()
-  });
-  messageInput.value=""; replyBar.style.display="none"; replyTo=null;
+  openChat(chatId, targetUser.username);
 };
-
-document.getElementById("backBtn").onclick=()=>{currentChatId=null; show(chatListScreen);}
-document.getElementById("logoutBtn").onclick=async ()=>{await signOut(auth); currentUser=null; show(loginScreen);}
-
-// DM
-document.getElementById("dmBtn").onclick=async ()=>{
-  const uname=prompt("Username to DM:"); if(!uname) return;
-  const users=await get(ref(db,"users")); let uid=null;
-  users.forEach(u=>{ if(u.val().username===uname) uid=u.key; });
-  if(!uid) return alert("User not found.");
-  const chatsSnap=await get(ref(db,"chats")); let chatId=null;
-  if(chatsSnap.exists()) chatsSnap.forEach(c=>{const chat=c.val(); if(!chat.isGroup && chat.members.includes(currentUser.uid) && chat.members.includes(uid)) chatId=c.key;});
-  if(!chatId){ const refNew=push(ref(db,"chats")); await set(refNew,{name:uname,isGroup:false,members:[currentUser.uid,uid]}); chatId=refNew.key; loadChats();}
-  openChat(chatId,uname);
-};
-
-// Group
-document.getElementById("groupBtn").onclick=async ()=>{
-  const name=prompt("Group name:"); if(!name) return;
-  const input=prompt("Enter usernames (comma-separated):");
-  const usernames=input?input.split(",").map(u=>u.trim()):[];
-  const usersSnap=await get(ref(db,"users"));
-  const memberIds=[currentUser.uid];
-  usersSnap.forEach(u=>{ const val=u.val(); if(usernames.includes(val.username)) memberIds.push(u.key); });
-  const refNew=push(ref(db,"chats"));
-  await set(refNew,{name,isGroup:true,members:memberIds});
-  loadChats();
-};
-
-// Help button
-document.getElementById("helpBtn").onclick=async ()=>{
-  const uname="Whisp_Management";
-  const users=await get(ref(db,"users")); let uid=null;
-  users.forEach(u=>{ if(u.val().username===uname) uid=u.key; });
-  if(!uid){ const newUserRef=push(ref(db,"users")); await set(newUserRef,{username:uname,email:""}); uid=newUserRef.key; }
-  const refNew=push(ref(db,"chats")); await set(refNew,{name:"Whisp Support",isGroup:false,members:[currentUser.uid,uid]});
-  loadChats();
-};
-
-// Notifications
-if("serviceWorker" in navigator){ navigator.serviceWorker.register("sw.js").then(()=>Notification.requestPermission()); }
-function showNotification(title,body){ if(Notification.permission==="granted") navigator.serviceWorker.ready.then(r=>r.showNotification(title,{body,icon:"https://cdn-icons-png.flaticon.com/512/1384/1384031.png"})); }
 </script>
 </body>
 </html>
